# ovro-lwa-solar

./: .codecov.yml  .gitignore  .gitmodules  .readthedocs.yaml  LICENSE  README.md  calibration.py  deconvolve.py  file_handler.py  flagging.py  flux_scaling.py  generate_calibrator_model.py  ovro_lwa_solar_cal.py  primary_beam.py  selfcal.py  setup.cfg  solar_pipeline.py  solar_realtime_pipeline.py  source_subtraction.py  test_calibrator_model.py  test_matrix.txt  test_primary_beam.py  test_primary_beam_nivedita_beam.py  utils.py
defaults/: Cas-sources.txt  CasA.txt  Cyg-sources.txt  CygA.txt  DW_beamquadranttable20151110.txt  LWAbeam_2015.fits  Nplus27to37.bl  Nplus3.bl  Tau-sources.txt  TauA.txt  Vir-sources.txt  VirA.txt  badbaselines.bl  expansion2expansion.bl  flagsRyan_adjacent.bl  leda.ants  source_models_readme  vlssr_catalogue_after_threshold.hdf5  withinARXboard.bl
docs/: conf.py  fastvis.rst  guide.rst  index.rst  requirements.txt
examples/: example_selfcal_grid_run.py  solar_analysis.py  solar_analysis_selfcal_with_step.py  test_calibrator_model.py  test_file_handler.py  test_flux_scaling_class1.py  test_image_ms_quick.py  test_primary_beam_nivedita_beam.py  test_solar_analysis.py  test_woody_beam.py
operation/: daily_lwa_file_transfer.py  daily_lwa_file_transfer.sh  solar_fast_pipeline.py  solar_fast_pipeline_staggered.py  solar_realtime_pipeline.py  staggered_file_downloader.py  transfer_event_data.py
ovrolwasolar/: __init__.py  beam_polcalib.py  calibration.py  config.py  coords.py  deconvolve.py  deprecated_functions.py  file_handler.py  flagging.py  (+14 more)
(+17 files in other folders)
