[metadata]
name = ovrolwasolar
version = 0.1.1
author = Bin Chen, Surajit Mondal, Peijin Zhang
author_email = bin.chen@njit.edu
description = Calibration, imaging, and analysis of solar data taken by the Owens Valley Long Wavelength Array (OVRO-LWA)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ovro-eovsa/ovro-lwa-solar
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = ovrolwasolar
python_requires = >=3.8
install_requires =
    suncasa
    astropy
    matplotlib
    scipy
    numpy
    pytest
    sunpy
    casatools

[options.packages.find]
where = ovrolwasolar
